--- a/src/components/LogPanel.scss
+++ b/src/components/LogPanel.scss
@@ -1,13 +1,16 @@
 .log-panel {
-    background-color: whitesmoke;
-    border: 1px solid black;
-    padding: 12px;
     font-family: monospace;
+    background-color: whitesmoke;
+    padding: 12px;
     list-style-type: none;
+
+    border: 1px solid black;
+    border-radius: 12px;
 
     height: 30vh;
     max-height: 30vh;
     overflow-y: scroll;
-    flex-direction: column-reverse;
+
     display: flex;
+    flex-direction: column-reverse;
 }
